# Project_Planner

./: .gitignore  Bugs.md  CHANGELOG.md  FEEDBACK.md  MAINTAINER.md  README.en.md  README.fr.md  README.md  WORKFLOW.md  index.html  package-lock.json  package.json  wms.css  wms.js
.claude/: settings.local.json
.github/workflows/: release.yml
renderer/: app.html  example.en.1.wmsplan  example.en.2.wmsplan  example.en.3.wmsplan  example.es.1.wmsplan  example.es.2.wmsplan  example.es.3.wmsplan  example.fr.1.wmsplan  example.fr.2.wmsplan  example.fr.3.wmsplan  example.wmsplan  home.css  home.html  home.js  i18n.js  tauri-ipc.js  template.en.json  template.es.json  template.json  wms.css  wms.js
scripts/: build-release.ps1  bump-version.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
test-projects/: alpha_distribution.wmsplan  beta_logistique.wmsplan  gamma_industrie.wmsplan
